# DEF4TGB

./: .env.template  .gitignore  README.md  pyproject.toml
config/: settings.py
src/: main.py
src/0_interfaces/: broker.py  data_pipeline.py  model.py
src/models/template/: feedback.py  strategy.py
